# review-gated-research-systems

./: .gitignore  CHANGELOG_副本.md  CITATION.cff  CITATION.cff_副本  CONTRIBUTING_副本.md  README.md  README_副本.md  demo  pyproject.toml  pyproject_副本.toml  requirements_副本.txt  src  start_local_ai_console.command
configs/: local_ai.example.json
demo/: README.md
demo/sample_inputs/: sample_pdf_placeholder.txt
demo/sample_outputs/: final_export.json  manifest.json  progress_log.jsonl  review_packet.json  review_packet.md
demo_副本/: run_demo.py
demo_副本/sample_inputs/: sample_links.csv  sample_metadata.json
demo_副本/sample_outputs/: analysis_brief.md  progress_log.jsonl  routing_decisions.json  run_summary.json  system_status.csv
diagrams/: README.md  record_lifecycle.mmd  routing_review_flow.mmd  system_overview.mmd
diagrams_副本/: module_map.mmd
docs/: architecture.md  case_study.md  creative_ideation.md  data_acquisition.md  evaluation.md  external_agent_patterns.md  local_console_monitoring.md  local_deployment.md  local_validation_protocol.md  model_architecture.md  model_ceiling_strategy.md  quality_guardrails.md  repo_descriptions.md  token_cost_control.md
docs_副本/: architecture.md  design_principles.md  repo_descriptions.md  review_logic.md
examples/: example_review_packet.md  example_system_flow.md
src/research_systems_showcase/: models.py
src/research_systems_showcase/export/: writer.py
src_副本/research_systems_showcase/: __init__.py  pipeline.py
tests/: test_local_ai_runtime.py
tests_副本/: test_demo_pipeline.py
(+26 files in other folders)
