[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "review-gated-research-systems"
version = "0.1.0"
description = "Sanitized public showcase of review-gated research systems for validation-aware, human-in-the-loop system design."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Chenxuan Wu"}
]
keywords = [
  "research automation",
  "human-in-the-loop",
  "validation",
  "systems design",
  "research systems",
  "literature ingestion"
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
